--- a/White-on-black.css
+++ b/White-on-black.css
@@ -250,7 +250,7 @@ input.button2[type=submit] {
 }
 
 #main::before {
-	content: "\43 \53 \53 \20 \6d \61 \64 \65 \20 \62 \79 \20 \41 \6e \64 \72 \65 \77 \43 \31 \30 \20 \77 \69 \74 \68 \20 \2665\2e \20  \49 \66 \20 \79 \6f \75 \20 \73 \65 \65 \20 \74 \68 \69 \73 \20 \6f \6e \20 \73 \6f \6d \65 \6f \6e \65 \20 \65 \6c \73 \65 \27 \73 \20 \62 \6c \6f \67 \20 \77 \69 \74 \68 \6f \75 \74 \20 \70 \65 \72 \6d \6d \69 \73 \69 \6f \6e \2c \20 \74 \65 \6c \6c \20 \74 \68 \65 \6d \20 \74 \68 \61 \74 \20 \74 \68 \65 \79 \20 \61 \72 \65 \20 \61 \20 \42 \41 \44 \20 \70 \65 \72 \73 \6f \6e";
+	content: "\43 \53 \53 \20 \6d \61 \64 \65 \20 \62 \79 \20 \41 \6e \64 \72 \65 \77 \43 \31 \30 \20 \77 \69 \74 \68 \20 \2665\2e";
 	color: white;
 	font-size: 18px;
 }
