--- a/White-on-black.css
+++ b/White-on-black.css
@@ -378,14 +378,13 @@ pre,
 .blog-shout-wrapper,
 .blog-tags-wrapper,
 .bbcode_quote,
-.cmty-hide-content,
-.comment{
+.cmty-hide-content,{
 	background-color: transparent !important;
 	border: 2px solid white;
 	box-shadow: 0px 0px 16px white;
 }
 
-.aops-modal-frame {
+.aops-modal-frame,.comment {
 	background-color: black !important;
 	border: 2px solid white;
 	box-shadow: 0px 0px 16px white;
