--- a/KhanAcademy.css
+++ b/KhanAcademy.css
@@ -3,6 +3,8 @@
 *
 * Released under the MIT Licence | https://github.com/actiniumn404/AoPS-Blog-CSS/blob/main/LICENSE
 *
+* This is not affiliated in any way with Khan Academy, Inc.
+*
 * Thank you to @Forester2015 for a little bit of help and feedback.
 */
 #wrapper::before {
