--- a/Github.css
+++ b/Github.css
@@ -1,8 +1,13 @@
 /*
-
-GitHub.css by AndrewC10 and forester2015
-Feel free to use, but do not delete this header.
-
+* GitHub.css by AndrewC10 and forester2015
+*
+* Feel free to use, but do not delete this header.
+*
+* Released under the MIT licence | https://github.com/actiniumn404/AoPS-Blog-CSS/blob/main/LICENSE
+*
+* Credit to Happycupcake's 14th Station CSS for the archives and Zhaom's AoPSNews.css? for the entry height limitation snippet.
+*
+* This is not affiliated in any way with GitHub Inc.
 */
 @media (prefers-color-scheme: dark) {
     :root {
@@ -17,6 +22,8 @@ Feel free to use, but do not delete this header.
         --border: #30363d;
         --color-invert-reply: 0.8;
         --color-invert-reply-other: 0.2;
+        --tag-color: rgb(250, 201, 5);
+        --tag-bg: rgba(251, 202, 4, 0.18);
     }
 }
 
@@ -33,6 +40,8 @@ Feel free to use, but do not delete this header.
         --border: #e1e4e8;
         --color-invert-reply: 0.1;
         --color-invert-reply-other: 0.8;
+        --tag-color: black;
+        --tag-bg: rgb(251, 202, 4);
     }
 }
 
@@ -201,7 +210,7 @@ a {
 }
 
 .entry {
-    max-height: auto;
+    max-height: none;
 }
 
 #main>div:not(:first-of-type:nth-last-of-type(3):nth-last-child(5))>.entry h1 {
@@ -362,7 +371,7 @@ body {
     text-align: center;
     font-weight: bold;
     position: absolute;
-    transform: translateY(-21px);
+    transform: translateY(-26px);
     right: calc(50vw - 550px);
     margin-left: 4px;
 }
@@ -550,6 +559,102 @@ body {
 #archive-widget .widget-title::before {
     content: "Table of Contents";
     font-size: 14px;
+}
+
+#archive-widget a {
+    color: var(--main-color) !important;
+}
+
+/*Shouts scrollbar patch by happycupcake. Modified by AndrewC10*/
+:where(.blog-shout-wrapper, .blog-tags-wrapper) .aops-scroll-outer>.aops-scroll-inner {
+    scrollbar-width: none;
+}
+
+:where(.blog-shout-wrapper, .blog-tags-wrapper) .aops-scroll-outer>.aops-scroll-inner::-webkit-scrollbar {
+    width: 0px;
+    /*Yay for nonstandard behavior /s.*/
+}
+
+/* Fluid archives by HappyCupcake*/
+.archive-month-topics {
+    display: block;
+    height: auto;
+}
+
+.archive-row {
+    transition: transform .2s .1s, height .2s;
+    height: 20px;
+    padding: 0 0 0 30px;
+    margin-left: 16px;
+}
+
+.archive-month-collapsed .archive-row {
+    transition: transform .2s, height .1s .1s;
+    transform: scaleY(0);
+    height: 0;
+}
+
+/*Archive image*/
+.month-image {
+    background: url(https://cdn.iconscout.com/icon/free/png-256/right-arrow-1767593-1502497.png) !important;
+    background-size: 16px 16px !important;
+    padding-left: 16px;
+    width: 16px;
+    filter: invert(var(--color-invert));
+    height: 16px;
+    transition: transform .5s;
+    transform: rotate(90deg);
+}
+
+.month-image[alt="+"] {
+    transition: transform .5s;
+    transform: rotate(-360deg);
+}
+
+/*Tags*/
+#side>div:not(.block, .widget) .widget-title {
+    font-size: 0px;
+}
+
+#side>div:not(.block, .widget) .widget-title::before {
+    content: "Labels";
+    font-size: 14px;
+}
+
+.cmty-item-tag {
+    background: var(--tag-bg) !important;
+    color: var(--tag-color) !important;
+    border: 1px solid rgba(250, 201, 5, 0.3);
+    border-radius: 24px;
+    font-weight: 500;
+}
+
+.entrywrap . cmty-items-input {
+    background: var(--main-bg);
+}
+
+/* Shouts */
+.blog-shout,
+#message {
+    background: var(--main-bg);
+    color: var(--main-color);
+    resize: none;
+}
+
+/* The part I don't really want to code: avatars */
+#contrib-widget a {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+:where(#contrib-widget a)::before {
+    content: "";
+    background: url("https://avatar.artofproblemsolving.com/no-avatar");
+    display: inline-block;
+    background-size: 32px 32px;
+    width: 32px;
+    height: 32px;
 }
 
 
