Allow message if there is no description in MSTeams.css

--- a/Microsoft-Teams.css
+++ b/Microsoft-Teams.css
@@ -903,6 +903,10 @@ div.commentwrap{
     display: none;
 }
 
+.description:empty::before{
+    content: "This blog doesn't have a description.";
+}
+
 #wrapper:has(#header h1:hover) .description, .description:hover{
     display: block;
 }
